# chatgpt-haber

./: .env.example  .gitignore  CHANGELOG.md  MAINTENANCE.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  build_prompt.py  build_random_news_exe.py  build_studio_exe.py  clean_ai_output.py  layout_issue.py  main.py  pyproject.toml  raw_ai_output.txt  repair_issue.py  requirements.txt  validate_issue.py
apps/: __init__.py  gazette_studio.py  random_news_app.py
archive/2026-06-06/: earthquake_report.json  image_report.json  issue.json  quality_report.json  source_report.html  source_report.json
archive/2026-06-22/: earthquake_report.json  (+5 more)
chatgpt_haber/: __init__.py  build_timing.py  builder.py  cli.py  issue.py  one_click.py  pages_publish.py  render.py  sources.py  technology_page.py
data/: issue.json
docs/: issue.json
examples/: issue.sample.json
prompts/: editorial_main_prompt.txt  master_prompt.txt  today_prompt.txt
schemas/: issue.schema.json
scripts/: build_exe.ps1
services/: __init__.py  gazette_reports.py  news_quality_filters.py  random_news_service.py  user_profile.py
static/: frontpage.css  frontpage_old.css  style.css
templates/: article_detail.html  base.html  front_page.html  lifestyle.html  page.html  pdf_article_detail.html
tests/: test_article_details.py  test_builder_architecture.py  test_cli.py  test_gazette_reports.py  test_issue_validation.py  test_news_quality_filters.py  test_one_click.py  test_pages_publish.py  test_random_news_service.py  test_render_structure.py  test_technology_page.py  test_version.py
(+27 files in other folders)
