[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-haber"
version = "0.2.0"
description = "Tek komutla 3 sayfalık baskıya hazır Türkçe gazete üreticisi."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.16",
  "jinja2>=3.1",
  "playwright>=1.55",
  "requests>=2.32",
  "requests-cache>=1.2",
  "feedparser>=6.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.4",
  "python-dotenv>=1.1",
  "jsonschema>=4.26",
  "pydantic>=2.11",
  "tenacity>=9.1",
  "Pillow>=11.2",
  "pypdf>=5.0"
]

[project.scripts]
chatgpt-haber = "chatgpt_haber.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["chatgpt_haber", "services", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
